# install-default-precommit

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  go.mod  main.go
src/: config.rs  main.rs
src/templates/: go.yml  python.yml  rust.yml
